@@ -32,6 +32,7 @@
     * if: Inventory settings can now be set host based
     * FIX: lnx_bonding/ovs_bonding: correct definition of bonding.include
     * Add: if check now able to handle interface groups  (if_groups)
+    * Add: oracle_tablespace now with flexible warn/crit levels(magic number)
 
     Multisite:
     * Added comment painter to notification related views
@@ -51,6 +52,7 @@
     * FIX: Fixed generation of auth.php (Needed for NagVis Multisite Authorisation)
     * FIX: Fixed missing general.* permissions in auth.php on slave sites in 
       case of distributed WATO setups
+    * Added oracle_tablespaces configuration to the application checkgroup
 
     Event Console:
     * Added UNIX socket for sending events to the EC
